<resources>
    <string name="app_name">Shared Services</string>

    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="car">Car</string>
    <string name="download">Download</string>
    <string name="event">Event</string>
    <string name="paper">Paper</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="login_link">Already registered!! Login Me.</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_link">Not a member?? Sign up now.</string>
    <string name="email">Email</string>
    <string name="email_err">Enter valid email address</string>
    <string name="password">Password</string>
    <string name="password_err">Enter the password</string>
    <string name="fname">First name</string>
    <string name="fname_err">Enter the first name</string>
    <string name="lname">Last name</string>
    <string name="lname_err">Enter the last name</string>
    <string name="hint_date">yyyy-mm-dd</string>
    <string name="phone">Phone number</string>
    <string name="phone_err">Enter the phone number</string>
    <string name="driver">Driver license</string>
    <string name="driverOn">I have a driving license</string>
    <string name="driverOff">I do not have a driving license</string>
    <string name="about">About</string>
    <string name="networkunvalid">Network is unavailable!!</string>
    <string name="serverunvalid">Server is unavailable!!</string>

    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/car</item>
        <item>@string/download</item>
        <item>@string/event</item>
        <item>@string/paper</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Girl</item>
        <item>Male</item>
    </string-array>
</resources>
